# quickpick

./: CMakeLists.txt  LICENSE  build.sh  draw.c  draw.h  menu_24dp_material.h  quickpick.c  settings_24dp_material.h  util.c  util.h
