cmake_minimum_required(VERSION 3.11) # FetchContent is available in 3.11+

include(FetchContent)
# Silence warning about setting timestamps when downloading dependencies
cmake_policy(SET CMP0135 NEW)

project(quickpick)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(SYSTEM_LIBS "Use system libraries instead of fetching at configure time." OFF)
option(SHARED_DEPS "Build SDL2 and freetype as shared libraries." OFF)

if (${SYSTEM_LIBS})
    find_package(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2)
    find_package(Freetype REQUIRED)
    add_library(freetype ALIAS Freetype::Freetype)
    add_executable(${PROJECT_NAME} quickpick.c draw.c util.c glad.c)
    target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2)
else()
#     FetchContent_Declare(
#        SDL2
#        GIT_REPOSITORY https://github.com/libsdl-org/SDL
#        GIT_TAG release-2.30.11
#    )
    FetchContent_Declare(
        SDL2
        URL https://github.com/libsdl-org/SDL/releases/download/release-2.30.11/SDL2-2.30.11.tar.gz
        URL_HASH MD5=bea190b480f6df249db29eb3bacfe41e
    )
    if (${SHARED_DEPS})
        set(SDL_SHARED ON  CACHE BOOL "" FORCE)
        set(SDL_STATIC OFF CACHE BOOL "" FORCE)
    else()
        set(SDL_SHARED OFF CACHE BOOL "" FORCE)
        set(SDL_STATIC ON  CACHE BOOL "" FORCE)
    endif()
    # We define SDL_MAIN_HANDLED and don't use the test lib; skip building both
    set(SDL2_DISABLE_SDL2MAIN ON  CACHE BOOL "" FORCE)
    set(SDL_TEST OFF CACHE BOOL "" FORCE)
    FetchContent_MakeAvailable(SDL2)
    FetchContent_Declare(
        Freetype
        URL https://download.savannah.gnu.org/releases/freetype/freetype-2.13.3.tar.gz
        URL_HASH MD5=ac1f0b517f62bd40d50bc995faa5741d
    )
    set(FT_DISABLE_ZLIB     ON  CACHE BOOL "" FORCE)
    set(FT_DISABLE_BZIP2    ON  CACHE BOOL "" FORCE)
    set(FT_DISABLE_PNG      ON  CACHE BOOL "" FORCE)
    set(FT_DISABLE_HARFBUZZ ON  CACHE BOOL "" FORCE)
    set(FT_DISABLE_BROTLI   ON CACHE BOOL "" FORCE)
    if (${SHARED_DEPS})
        set(BUILD_SHARED_LIBS ON CACHE BOOL "" FORCE)
    else()
        set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
    endif()
    FetchContent_MakeAvailable(Freetype)

    add_executable(${PROJECT_NAME} quickpick.c draw.c util.c glad.c)

    if (${SHARED_DEPS})
        target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2)
        # keep the exe runnable by putting the DLLs next to it
        add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:SDL2::SDL2> $<TARGET_FILE_DIR:${PROJECT_NAME}>
            COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:freetype> $<TARGET_FILE_DIR:${PROJECT_NAME}>
        )
    else()
        target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2-static)
    endif()
endif()
# if (WIN32)
#     target_link_libraries(${PROJECT_NAME} PRIVATE SDL2::SDL2main)
# endif()

target_link_libraries(${PROJECT_NAME} PRIVATE freetype)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)

if(UNIX AND NOT APPLE)  # or: if(NOT WIN32)
  target_link_libraries(${PROJECT_NAME} PRIVATE m)
endif()

if(MSVC)
    set_target_properties(${PROJECT_NAME} PROPERTIES
        LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup"
        LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup"
    )
    # Supress warnings for integer-float conversions. Otherwise, the default
    # /W3 warnings are enabled.
    target_compile_options(${PROJECT_NAME} PRIVATE /wd4244)
    target_link_options(${PROJECT_NAME} PRIVATE /INCREMENTAL:NO)
endif()

# Web Configurations
if (EMSCRIPTEN)
    # Tell Emscripten to build an example.html file.
    set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".html")
endif()

# Checks if OSX and links appropriate frameworks (Only required on MacOS)
if (APPLE)
    target_link_libraries(${PROJECT_NAME} "-framework IOKit")
    target_link_libraries(${PROJECT_NAME} "-framework Cocoa")
    target_link_libraries(${PROJECT_NAME} "-framework OpenGL")
endif()
